--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* transition: background-color 2000ms ease-in; */
 }
+
+/*
+.MuiToolbar-root, .options-bar {
+  transition: background-color 2000ms ease-in;
+}
+*/
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
